--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         name="secondNumberOfPassword"
         placeholder="Second Number (2 Digits)"
       />
+      <label for="step">Step Amount</label>
+      <input
+        type="number"
+        name="step"
+        id="hashStepAmount"
+        title="13"
+        minlength="1"
+        maxlength="26"
+      />
       <button type="submit" onclick="submitPassword()">
         <a id="generateButton">Generate</a>
       </button>
