Just quick fix to be correct for Rubric
This is just a APCS assignment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Password Algorithm</h1>
     <hr />
-    <form onsubmit="submitPassword()">
+    <form onsubmit="submitPassword()" id="passwordForm">
       <label for="websiteName"
         ><p>Name of website you wish to generate password for</p></label
       >
